css/styles.css
/* Meyer's CSS Reset */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-size: 100%;
  vertical-align: baseline;
  background: transparent;
  text-decoration: none;
  color: inherit;
}

body {
  line-height: 1;
}

ol, ul {
  list-style: none;
}

blockquote, q {
  quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
  content: "";
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}


/* 
    * {
      outline: 1px solid red !important; 
   */


/*  */

    :root {
        --primary-color: #1a1a1a;
        --secondary-color: #fafafa;
        --third-color: #a8a8a8;
    }
    
    ::selection {
      background-color: var(--primary-color);
      color: var(--secondary-color);
    }

    body {
      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
      overflow-x: hidden;
    }
      
    body.dark-mode {
        background-color: var(--primary-color);
        color: var(--secondary-color);
    }



    body.dark-mode  ::selection {
      background-color: var(--secondary-color);
      color: var(--primary-color);
    }
 
    /* Hide the default scrollbar */
    body::-webkit-scrollbar {
      width: 1em;
    }

    /* Track */
    body::-webkit-scrollbar-track {
      background-color: var(--primary-color);
    }

    /* Handle */
    body::-webkit-scrollbar-thumb {
      background:  #fafafa;
      border-radius: 5px;
      border: 1px solid #1A1A1A;
     
    }


    body, html {
      width: 100%;
      overflow-x: hidden;
    }



  .navbar {
  position: sticky;
  top: 0;
  z-index: 9999; /* Ensure the navbar stays on top */
  margin: auto;
  width: auto;
  right: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--primary-color);
  color: var(--secondary-color);
  padding: 1.5em;
 
}

  
  .navbar-logo {
    font-size: 21px;
    font-weight: 600;
    font-style: normal;
    line-height: 24px;
    letter-spacing: 1.2px;
    margin-left: 5%;
  }
  
  .navbar-links {
    list-style: none;
    display: flex;
    margin-left: auto;
  }
  
  .navbar-links li {
    font-size: 1em;
    font-style: normal;
    font-weight: 500;
    line-height: 22px;
    margin-right: 20px;
    margin-top: 5px;
  }
  
  .navbar-links li a {
    text-decoration: none;
    color: var(--secondary-color);
    position: relative;
  }
  
  .navbar-links li a::after {
    content: "";
    display: block;
    width: 100%;
    height: 2px;
    background-color: var(--secondary-color);
    transform: scaleX(0);
    transition: transform 0.3s ease-in-out;
  }
  
  .navbar-links li a:hover::after,
  .navbar-links li a.active::after {
    transform: scaleX(1);
  }
  
  .navbar-buttons {
    display: flex;
    align-items: center;
  }
  
  .navbar-buttons button {
    background-color: transparent;
    border: none;
    cursor: pointer;
    margin-left: 5px;
    font-size: 20px;
    color: var(--secondary-color);
  }


  .navbar-buttons .hamburger-toggle {
    display: none;
  }


 /* hhhhhhheeeeeeeeeeerrrrrrrrrooooooooooo */

  .hero {
    background-image: url('../images/light.png');
    background-size: 100% 100%;
    background-position: center center;
    margin: 0;
    padding: 0;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    text-align: left;
    color: var(--primary-color);
    max-height: 900px;

  }
  
  body.dark-mode .hero {
    background-image: url('../images/dark.png');
    color: var(--secondary-color);
  
  }
  
  body.dark-mode .hero .btn {
    background-color: var(--secondary-color);
    color: #1A1A1A;
  }
  
  .hero-content {
    max-width: 800px;
    padding: 0 20px;
    margin-left: 33%; /* Adjust the margin-left value as needed */

  }
  
  .hero h1 {
    font-size: 64px;
    font-weight: 600;
    font-style: normal;
    line-height: 52px;
    margin-bottom: 1.5rem;
  }
  
  .hero p {
    font-size: 21px;
    font-weight: 500;
    font-style: normal;
    line-height: 33px;
    margin-bottom: 1.5rem;
    max-width: 775px;
   
  }
  
  .hero .btn {
    font-size: 18px;
    font-weight: 550;
    font-style: normal;
    line-height: 30px;
    display: inline-block;
    background-color: var(--primary-color);
    color: var(--secondary-color);
    padding: 10px 20px;
    border-radius: 5px;
    text-decoration: none;
   
  }

  .hero-links p {
    margin-top: 10%;
    font-size: 18px;
    transition: opacity 0.5s ease-in-out;
  }



  #arrow {
    margin-top: -20px;
    margin-left: 40px;
    animation: arrowDown 1.7s forwards infinite;
    transition: opacity 0.5s ease-in-out;
  }

  @keyframes arrowDown {
    
    0% {
      transform: translateY(0);
    }
    100% {
      transform: translateY(6px);
    }
    
  }

  .hide {
    display: none;
}

.portfolio-heading h2 {
  width: 100%;
  text-align: center; 
  padding: 1em 0;
  margin: 0;
  font-size: 2em;
}


 .portfolio-items-wrapper{
  margin: 0;
  padding: 0 100px;
  display: grid;
  grid-template-columns: repeat(3, minmax(350px, 1fr));
  grid-auto-rows: auto;
  overflow-x: hidden;
  scrollbar-width: thin;
  scrollbar-color: #888 #f0f0f0;
  -webkit-overflow-scrolling: touch; /* for mobile devices */
  justify-items: center; 
  align-items: center; 
}

.portfolio-item {
  display: flex;
  flex-direction: column; /* stacks the img, title, and description vertically */
  align-items: center;
  justify-content: space-between; /* distributes space evenly between items for images too */
  width: 350px;
  height: 350px;
  padding: 175px 25px;
  padding-top: 50px;
  overflow: hidden;
  border-radius: 8px;
 
  color: #333;
}

.portfolio-item img {
  width: 100%;
  height: auto; /* allows the image to maintain its aspect ratio */
}

.portfolio-title {
  font-size: 1.2rem;
  color: var(--primary-color); 
  display: flex;
  margin-top: 30px; 
}

body.dark-mode .portfolio-title {
  color: var(--secondary-color); 
}

.portfolio-description {
  font-size: 1em;
  text-align: center;
  color: var(--third-color); 
  margin-top: 10px; 
  line-height: 1.5;
}

/* about */

.about-container {
  display: flex;
  flex-direction: column;  /* Align items in a column */
  align-items:center; 
  justify-content: center;
  width: 100%;
  margin: 4em auto;
  padding: 0;
}

.about-heading {
  width: 100%;
  text-align: center; 
  margin: 1em auto;
  font-size: 2em;
}

.about-grid {
  padding: 20px;
  display: grid;
  grid-template-columns: 1fr 1fr; 
  grid-gap: 10%
}

.about-img img {
  max-width: 500px;
  width: 100%; 
  height: auto;
}

.about-img p {
  font-size: 12px;
  padding: 10px 0;
  color: var(--third-color);
}

.about-text {
  max-width: 500px;
}

.about-text p {
  font-size: 1.02em;
  line-height: 1.5;
  margin-bottom: 1.5em;
  word-wrap: normal;
}

/* drop cap effect */
.about-text p:first-of-type::first-letter {
  font-size: 300%;
  float: left;
  padding-right: 5px;
  line-height: 1; 
}

.about-text p:first-of-type {
  clear: both;
}


/* contact section */

.contact-container {
  max-width: 500px;
  margin: 2em auto;
  padding: 2em;
}

.contact-container h2 {
  font-size: 1.5em;
  margin-bottom: 10px;
  font-weight: 600;
  line-height: 1.5;
}

.contact-container p {
  font-size: 1em;
  padding-bottom: 20px;
  font-weight: 400;
  line-height: 1.5;
}

.form-group {
  margin-bottom: 1.5em;
}

.form-group label {
  display: flex;
  align-items: center;
}

.form-group input, .form-group textarea {
  width: 100%;
  padding: .5em;
  border: 1px solid var(--primary-color);
  background: var(--secondary-color);
}

#confirmation {
  margin: 0;
  margin-right: 10px;
  width: 3%;
  user-select: none; /* Disable text selection */
}


.submit-btn {
  background: #333;
  color: #fff;
  padding: .5em 1em;
  border: none;
  cursor: pointer;
  display: inline-block;
  transition: background .3s;
}

.submit-btn:hover {
  background: #444;
}

.submit-btn:disabled {
  opacity: 0.5;
 
  
}

#button-cover {
  position: absolute;
  width: 10%;
  height: 5%;
  background-color: transparent;
  z-index: 9998;
  cursor: pointer;
}

#confirm-msg {
  padding-bottom: 20px;
}

